--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,13 @@
-.interest {
+.shop {
     flex-basis: 16%;
     border: 1px dotted black;
-    padding: 1em;
+    
     margin: .05em;
     text-align: center;
 }
 
+.list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
